VeraSandBox2016/src/objects/Full_Profile_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Stores metadata for Full Profile pages.</description>
    <fields>
        <fullName>Fields__c</fullName>
        <description>Stores name of the field set to be used for current section</description>
        <label>Field Set Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_By_Record_Type__c</fullName>
        <description>Stores record type name by which records are to be filtered. Required if layout is table.</description>
        <label>Filter By Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <description>Layout to be used. It can either be Standard(for 2 column layout) or Table(for grid).</description>
        <label>Layout</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Api_Name__c</fullName>
        <description>It stores the API Name of the sObject.</description>
        <label>Object Api Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <description>Page name on which this section is to be displayed. Possible values are ExpertSearchFullProfile or NominationFullProfile.</description>
        <label>Page Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <description>Name of the section on the page. Value of this field will be used to fetch complete record combined with page name value.</description>
        <label>Section Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Full Profile Setting</label>
</CustomObject>